# ChangeLog for app-text/gsview
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/gsview/ChangeLog,v 1.5 2004/06/24 22:37:53 agriffis Exp $

  07 May 2004; Heinrich Wendel <lanius@gentoo.org> gsview-4.5.ebuild:
  mark x86

  13 Dec 2003; Heinrich Wendel <lanius@gentoo.org> gsview-4.5.ebuild:
  fixed some typos, added `use doc` functionality

*gsview-4.5 (09 Dec 2003)

  09 Dec 2003; Heinrich Wendel <lanius@gentoo.org> gsview-4.5.ebuild:
  initial ebuild, bug #33142, submitted by Craig Bradney <cbradney@zip.com.au>
