@@ -1,6 +1,11 @@
 # ChangeLog for app-text/gsview
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/gsview/ChangeLog,v 1.5 2004/06/24 22:37:53 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/gsview/ChangeLog,v 1.6 2004/09/22 12:44:00 lanius Exp $
+
+*gsview-4.6 (22 Sep 2004)
+
+  22 Sep 2004; Heinrich Wendel <lanius@gentoo.org> +gsview-4.6.ebuild:
+  version bump, bug #62062
 
   07 May 2004; Heinrich Wendel <lanius@gentoo.org> gsview-4.5.ebuild:
   mark x86
